fix #status css so it looks right on mobile

--- a/public/assets/css/picoreflow.css
+++ b/public/assets/css/picoreflow.css
@@ -26,7 +26,6 @@ body {
     -moz-border-radius: 7px;
     border-radius: 7px;
     border: 1px solid #ddd;
-    height: 80px;
     -moz-box-shadow: 0 0 1.1em 0 rgba(0,0,0,0.55);
     -webkit-box-shadow: 0 0 1.5em 0 rgba(0,0,0,0.55);
     box-shadow: 0 0 1.1em 0 rgba(0,0,0,0.55);
